--- a/CMPUT301Project/res/layout/activity_publish_recipe_view.xml
+++ b/CMPUT301Project/res/layout/activity_publish_recipe_view.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PublishRecipeView" >
+    tools:context=".PublishRecipeView"
+    android:background="@color/background" >
 
     <ListView
         android:id="@+id/recipesListForPublish"
