--- a/CMPUT301Project/res/layout/activity_recipes_on_web_view.xml
+++ b/CMPUT301Project/res/layout/activity_recipes_on_web_view.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipesOnWebView" >
+    tools:context=".RecipesOnWebView"
+    android:background="@color/background" >
 
     <EditText
         android:id="@+id/WebsearchEditText"
