--- a/CMPUT301Project/res/layout/recipe_view.xml
+++ b/CMPUT301Project/res/layout/recipe_view.xml
@@ -3,4 +3,5 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="CreateNewRecipeView" />
+    tools:context="CreateNewRecipeView"
+    android:background="@color/background" />
